--- a/index.html
+++ b/index.html
@@ -229,10 +229,12 @@
     padding:1rem;
     border-radius:10px;
     box-shadow:0 4px 30px rgba(0,0,0,0.08);
+    margin-bottom:1.5rem;
+    overflow-Y:auto;
     }
     
     table{
-    width:100%;
+    min-width:600px;
     }
     
     th,
