--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
       <div class="sidebar-top">
-        <a href="#main-content" class="active"><i class="ri-dashboard-line"></i>Dashboard</a>
+        <a href="#" class="active"><i class="ri-dashboard-line"></i>Dashboard</a>
         <a href="#customer"><i class="ri-team-line"></i>Customer</a>
         <a href="#"><i class="ri-calendar-line"></i>Meetings</a>
         <a href="#"><i class="ri-mail-line"></i>Messages</a>
@@ -447,7 +447,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="main-content" id="main-content">
+    <div class="main-content">
       <div class="cards">
         <div class="card">
           <i class="ri-user-line"></i>
